--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -3,7 +3,7 @@ name: Update XML Daily
 on:
   #schedule:
    # - cron: '0 0 * * *'  # всеки ден 00:00 UTC
- # workflow_dispatch:
+  workflow_dispatch:
 
 permissions:
   contents: write
