--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -1,37 +1,29 @@
 name: Update XML Daily
 
 on:
-  #schedule:
-   # - cron: '0 0 * * *'  # всеки ден 00:00 UTC
+  # schedule:
+  #   - cron: '0 0 * * *'  # Всеки ден в 00:00 UTC (03:00 BG време)
   workflow_dispatch:
-
-permissions:
-  contents: write
-
-concurrency:
-  group: update-xml
-  cancel-in-progress: true
 
 jobs:
   update-xml:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: Install dependencies
         working-directory: ./proba3
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          python -c "import requests, bs4, lxml; print('✅ requests/bs4/lxml OK')"
 
       - name: Run Filstar checker
         working-directory: ./proba3
@@ -48,18 +40,10 @@ jobs:
       - name: Commit and Push changes
         working-directory: ./proba3
         env:
-          GIT_AUTHOR_NAME: github-actions[bot]
-          GIT_AUTHOR_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-          GIT_COMMITTER_NAME: github-actions[bot]
-          GIT_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          set -e
-          shopt -s nullglob
-          files=( *.xml *.csv )
-          if [ ${#files[@]} -gt 0 ]; then
-            git add "${files[@]}"
-            git commit -m "Daily auto-update XML and CSV [skip ci]" || echo "No changes to commit"
-            git push
-          else
-            echo "No XML/CSV to commit"
-          fi
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git add -A
+          git commit -m "Daily auto-update XML and CSV [skip ci]" || echo "No changes to commit"
+          git push
